--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,1 +1,16 @@
-<h2>Hello world</h2>
+<h1>The Amazing Address Book App</h1>
+  <section>
+    The Amazing Address Book App is your place to store all those contacts you need to remember. Why use your phone when you could use this awesome app? To begin adding new contacts, just click the create a new contact button below!
+
+    <%= link_to 'Create a New Contact', new_contact_path %>
+  </section>
+
+<h2>My Contacts</h2>
+  <section>
+    <article>
+      <% @contacts.each do |contact| %>
+        <p><%= contact.full_name %></p>
+        <p> <%= contact.phone_number %> </p>
+      <% end %>
+    </article>
+  </section>
