--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,21 @@
  *= require_tree .
  *= require_self
  */
+
+ body {
+   margin: 0 auto;
+   width: 60%;
+   display: grid;
+ }
+
+header {
+  text-align: center;
+}
+
+header h1 {
+  font-size: 2.75em;
+}
+
+header p {
+  font-size: 1em;
+}
