--- a/app/assets/stylesheets/contact.scss
+++ b/app/assets/stylesheets/contact.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Contact controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+main.home a {
+  text-align: center;
+  display: block;
+  margin: 0 auto;
+  background-color: #000;
+  color: #fff;
+  padding: 20px;
+  width: 30%;
+}
+
+main.home h2 {
+  text-align: center;
+}
